--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
   <div class="line"></div>
   
   <div class="kotak_form">
-  <form id="registrationForm" onsubmit="showThankYou()">
+  <form action="req.php" method="post" id="registrationForm" onsubmit="showThankYou()">
     <label for="nama">Nama </label>
     <input type="text" id="nama" name="nama" required>
     <label for="jurusan">Jurusan</label>
