--- a/form.html
+++ b/form.html
@@ -62,8 +62,10 @@
       <p>Terima kasih telah mendaftar di PASKAH IMF 2024</p>
       <img src="stk_paskah.webp" alt="Stiker">
 <div class="wa" >
-    <p>Informasi Pembayaran <br>
-    (WA) +62 821-6712-2295 (<span>&#x1F4F1;</span>)</p>
+    <p>Pembayaran <br>
+      <a href='https://link.dana.id/minta/2tvv0u25ghz'>DANA</a></p>
+    <p>Informasi Pembayaran Lain <br>
+    (WA) 0821-6712-2295(Avelyn) (<span>&#x1F4F1;</span>)</p>
   </div>
 </div>
 </div>
