--- a/form.html
+++ b/form.html
@@ -63,9 +63,7 @@
       <img src="stk_paskah.webp" alt="Stiker">
 <div class="wa" >
     <p>Pembayaran <br>
-      <a href='https://link.dana.id/minta/2tvv0u25ghz'>DANA</a></p>
-    <p>Informasi Pembayaran Lain <br>
-    (WA) 0821-6712-2295(Avelyn) (<span>&#x1F4F1;</span>)</p>
+   <a href="https://forms.gle/UqWc7PenxYE1W6bn7" id="transaksiButton" class="hidden">Lakukan Transaksi</p>
   </div>
 </div>
 </div>
